fix(blockWrapper): Adjust spacing

--- a/components/block/blockWrapper/block.module.scss
+++ b/components/block/blockWrapper/block.module.scss
@@ -14,6 +14,6 @@
 		@apply py-0;
 	}
 	&--small {
-		@apply pt-0;
+		@apply py-16;
 	}
 }
